--- a/public/style/style.css
+++ b/public/style/style.css
@@ -109,3 +109,22 @@ footer {
       background-color: #1a3c54;
       transform: scale(1.1);
     }
+
+    .loading-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999; /* Ensure it appears on top of other elements */
+      display: none; /* Hide the overlay by default */
+    }
+
+    .loading-message {
+      color: white;
+      font-size: 24px;
+    }
