--- a/public/style/style.css
+++ b/public/style/style.css
@@ -116,15 +116,25 @@ footer {
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.9); /* Semi-transparent black background */
+      background-color: rgba(0, 0, 0, 1); /* Completely opaque black background */
       display: flex;
       justify-content: center;
       align-items: center;
       z-index: 9999; /* Ensure it appears on top of other elements */
       display: none; /* Hide the overlay by default */
+      transition: opacity 0.3s ease; /* Add a transition for the opacity property */
+    }
+
+    .loading-overlay.show {
+      opacity: 1; /* When the class "show" is added, the loading overlay will become fully opaque */
+    }
+
+    .loading-overlay.hide {
+      opacity: 0; /* When the class "hide" is added, the loading overlay will become transparent */
     }
 
     .loading-message {
       color: white;
       font-size: 24px;
+      margin-left: 10px;
     }
