--- a/public/style/style.css
+++ b/public/style/style.css
@@ -116,7 +116,7 @@ footer {
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.9); /* Completely opaque black background */
+      background-color: #15202b; /* Dark gray background */
       display: flex;
       justify-content: center;
       align-items: center;
